fix(site): don't stretch post content image

--- a/src/site/components/PostPage/PostPage.module.css
+++ b/src/site/components/PostPage/PostPage.module.css
@@ -86,7 +86,7 @@
 }
 
 .image {
-  /* min-width: 320px; */
+  object-fit: cover;
   max-width: 100%;
   max-height: 100%;
   box-sizing: border-box;
